<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/widget_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/assignment_24dp_e3e3e3_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/widget_inventory_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_logo"
        android:layout_alignParentStart="true"
        android:text="@string/inventory"
        android:textColor="#e7522e"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/cu_nto_tengo_de_inventario"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/widget_balance_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_question_label"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ ****"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/widget_toggle_visibility"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_visibility" />
    </LinearLayout>

    <TextView
        android:id="@+id/widget_manage_inventory_label"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/widget_settings_icon"
        android:gravity="center_vertical"
        android:text="@string/gestionar_inventario"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/widget_settings_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_settings" />

</RelativeLayout>
